<resources>
    <string name="app_name">SurveyApp</string>
    <string name="make_modifications">Make_Modifications</string>
    <string name="view_surveys">View_Surveys</string>
    <string name="home">Notts Automated Survey App</string>
    <string name="create_survey">Create Survey</string>
    <string name="surveyor_name">Surveyor Name</string>
    <string name="progress">%1$d / %2$d (%3$.2f)</string>
    <string name="blank"></string>
    <string-array name="search_surveys_by">

        <item>SURVEY ID</item>
        <item>ADDRESS</item>
        <item>YEAR</item>
        <item>MONTH</item>

    </string-array>

    <string name="c28">1.Daywork Labour - Electrician</string>
    <string name="c29">2.Disconnect electric cooker.</string>
    <string name="c30">3.De-commission intruder alarm</string>
    <string name="c31">4.Supply and Fit mains isolator/PME</string>
    <string name="c32">5.Fit insurance lock</string>
    <string name="c33">6.Renew cylinder lock</string>
    <string name="c35">7.Fix only lock</string>
    <string name="c36">8.Double glazed unit up to 0.50m2</string>
    <string name="c37">9.Double glazed unit up to 1.0m2</string>
    <string name="c40">10.Periodic inspection in void properties</string>
    <string name="c41">11.installation certification- in conjunction</string>
    <string name="c42">12.Smoke alarm certificates</string>
    <string name="c43">13.Check, test and certificate eletrics before repairs</string>
    <string name="c44">14.Check, test and certificate eletrics after repairs</string>
    <string name="c45">15.Additional radial circuit</string>
    <string name="c46">16.Additional lighting circuit</string>
    <string name="c47">17.Additional ring main</string>


    <string-array name="heating_selection">
        <item>None</item>
        <item>System boiler</item>
        <item>Combi boiler</item>
        <item>D heating</item>
    </string-array>

    <string-array name="dummy_categories">
        <item>ROOF</item>
        <item>Interrior</item>
        <item>Water</item>
        <item>Gas</item>
        <item>Fence</item>
    </string-array>
    <string-array name="dummy_SOR_Codes">
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
        <item>BK1270</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HEATING">Heating</string>
    <string name="SurveyTypeTxt">Survey Type:</string>
    <string name="RevenuType">Revenue</string>
    <string name="CapitalType">Capital</string>
    <string name="CancelButton">Cancel</string>
    <string name="NextButton">Next</string>
    <string name="PriorWorkHeading">Prior Work</string>
    <string name="Isolator_txt">Isolator</string>
    <string name="Rewire_txt">Re-Wire</string>
    <string name="meterTxt">Meter Issues?</string>
    <string name="HeatingTxt">Heating?</string>
    <string name="FastTrackingTxt">Fast Track?</string>
    <string name="glassText">Glass?</string>
    <string name="altroTxt">Altro?</string>
    <string name="SearchButton">search</string>
    <string name="singleSoRTotal">Total</string>
    <string name="quantity_label">Quantity</string>
    <string name="sors_added_label">SoR\'s Added</string>
    <string name="Recharge_Label">Recharge Cost</string>
    <string name="Recharge_Box">Is Recharge?</string>
    <string name="removeButton">Remove</string>
    <string name="SoRToSurvey">SoRs Attached to Survey</string>
    <string name="Surveyor_name_label">Surveyor name</string>
    <string name="Address_label">Address</string>
    <string name="name_hint_label">Name</string>
    <string name="no_text_lebel" />
    <string name="address_hint_label">address</string>
    <string name="post_code_label">Post Code</string>
    <string name="post_code_hint">Post Code</string>
    <string name="phone_number_label">Phone number</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="date_label">Date:</string>
    <string name="dd_mm_yyyy_label">DD/MM/YYYY</string>
    <string name="HOURS">Hours</string>
    <string name="hrs">Hrs</string>
    <string name="Qty">Qty</string>
    <string name="commentHint">comment</string>
    <string name="DecPoints">Declaration Points:</string>
    <string name="Abesto">Asbesto Removal</string>
    <string name="AbestoHint">Text input here .......</string>
    <string name="DecorationPoints">Decoration Points: </string>
    <string name="Location_TAPS">Location TAPS: </string>
    <string name="FloorLevel">Floor Level: </string>
    <string name="remove_all_label">RESET</string>
    <string name="button">Button</string>
    <string name="pdf">PDF</string>
    <string name="houseNumberLabel">House #</string>
    <string name="houseNumberHint">Enter House Number</string>
    <string name="Revenue">Revenue</string>
    <string name="Capital">Capital</string>
    <string name="Survey_Information">Survey Information</string>
    <string name="Date_Of_Survey">Date of Survey</string>

</resources>