<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <!-- TODO: Update blank fragment layout -->

    <data>

        <variable
            name="mainMenu"
            type="com.example.surveyapp.fragments.mainFragments.MainMenuFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutMMFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondBackgroundColor">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="295dp"
            android:layout_height="338dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.228"
            app:srcCompat="@drawable/ic_nottinghamcitylogoresize" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:gravity="center"
            android:text="@string/home"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />

        <Button
            android:id="@+id/button3"
            android:layout_width="265dp"
            android:layout_height="42dp"
            android:fontFamily="@font/button_fonts"
            android:text="@string/make_modifications"
            android:textColorLink="#B51111"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goToViewSurveyButton"
            app:layout_constraintVertical_bias="0.111" />

        <Button
            android:id="@+id/goToViewSurveyButton"
            android:layout_width="265dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/button_fonts"
            android:text="@string/view_surveys"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createSurveyButtonMain"
            app:layout_constraintVertical_bias="0.103" />

        <Button
            android:id="@+id/createSurveyButtonMain"
            android:layout_width="265dp"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/button_fonts"
            android:text="@string/create_survey"
            app:layout_constraintBottom_toTopOf="@+id/goToViewSurveyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.222"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="295dp"
            android:layout_height="338dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.975"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.273"
            app:srcCompat="@drawable/ic_nottinghamcitylogoresize" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>