<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.Tabs.adapters.checkListTab.CreateSurveyP1p5Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fireDoorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fire Door"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="344dp"
                    android:layout_height="wrap_content"

                    android:text="CheckBox" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fdCommentTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Comments:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/editTextTextPersonName6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Isolator_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Rewire_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="74dp">

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meterTxt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HeatingTxt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/checkBox11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FastTrackingTxt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/glassText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>


            <TableRow
                android:layout_width="845dp"
                android:layout_height="28dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altroTxt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="346dp"
                    android:layout_height="29dp"
                    android:text="CheckBox" />
            </TableRow>


        </TableLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="400dp"
            android:layout_marginLeft="400dp"
            android:layout_marginEnd="500dp"
            android:layout_marginRight="500dp"
            android:layout_marginBottom="70dp"
            android:text="Checklist"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <TableLayout
            android:layout_width="265dp"
            android:layout_height="70dp"
            android:layout_marginStart="275dp"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="800dp"
            android:layout_marginRight="800dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/heatTxt"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:text="@string/HEATING"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/systemBoilerSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/heating_selection"
                    android:gravity="clip_horizontal|right"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.03"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.112" />
            </TableRow>

        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>